# TQ_VISION_BENCH_TEST_FRAMEWORK

./: .gitignore  README.md
RESEARCH_NOTE/: TurboQuant_VLM_Benchmark_Research_Note.md
TQ_BACKEND/: .env.example  README.md  pyproject.toml  serve.py
TQ_BACKEND/engine/: __init__.py  _processor_shim.py  config.py
TQ_BENCH_FRAMEWORK/: .env.example  README.md  pyproject.toml
TQ_BENCH_FRAMEWORK/datasets/processed/commonsenseqa_text_3000/: commonsenseqa_text_3000.jsonl
TQ_BENCH_FRAMEWORK/datasets/processed/longbench_text_100/: longbench_text_100.jsonl
TQ_BENCH_FRAMEWORK/datasets/processed/mmlu_text_1000/: mmlu_text_1000.jsonl
TQ_BENCH_FRAMEWORK/datasets/processed/mmlu_text_3000/: mmlu_text_3000.jsonl
TQ_BENCH_FRAMEWORK/datasets/processed/text_mixed_3000/: text_mixed_3000.jsonl
TQ_BENCH_FRAMEWORK/src/tq_bench_framework/: __init__.py  __main__.py  analysis.py  cli.py  dataset.py  dataset_prepare.py  dataset_sources.py  embedded_runtime.py  metrics.py  reporting.py  runner.py  runtime_client.py  schema.py  settings.py
TQ_BENCH_FRAMEWORK/src/tq_bench_framework/benchmarks/: __init__.py  registry.py
TQ_BENCH_FRAMEWORK/src/tq_bench_framework/benchmarks/manifests/: ai2d.yaml  chartqa.yaml  chartqapro.yaml  commonsenseqa_text_3000.yaml  docvqa.yaml  hellaswag_text_3000.yaml  longbench_text_100.yaml  mathvista.yaml  mmlu_text_1000.yaml  mmlu_text_3000.yaml  mmmu.yaml  ocrbench_v2.yaml  text_mixed_3000.yaml  textvqa.yaml
TQ_BENCH_FRAMEWORK/tests/: test_longbench_text_100.py  test_mmlu_text_1000.py  test_text_3000_benchmarks.py  test_text_mixed_3000.py
TQ_BENCH_FRAMEWORK/tools/: dump_kv_tensor_stats.py  prepare_commonsenseqa_text_3000.py  prepare_hellaswag_text_3000.py  prepare_longbench_text_100.py  prepare_mmlu_text_1000.py  prepare_mmlu_text_3000.py  prepare_text_mixed_3000.py
