[project]
name = "tq-vlm-bench"
version = "0.1.0"
description = "TurboQuant KV cache quantization benchmark for VLMs (oMLX compatibility layer)"
requires-python = ">=3.12"

dependencies = [
    # oMLX compatibility branch pinned to the upstream PR #675 dependency set.
    # This provides `omlx.compat.vlm`, which wraps the validated mlx-vlm /
    # mlx-lm revisions behind a stable import target for this benchmark stack.
    "omlx @ git+https://github.com/Chedrian07/omlx.git@omlx_ver_test",
    # mlx backend split by platform:
    #   - macOS (Apple Silicon): plain `mlx` auto-pulls `mlx-metal` via its own metadata
    #   - Linux (WSL2 / x86_64 + NVIDIA): the `cuda13` extra pulls `mlx-cuda-13`
    'mlx>=0.31.0 ; sys_platform == "darwin"',
    'mlx[cuda13]>=0.31.0 ; sys_platform == "linux"',

    "datasets>=2.19.0",
    "Pillow>=10.0.0",
    "numpy>=2.0",
    "scipy>=1.14",
    "matplotlib>=3.9",
    "seaborn>=0.13.0",
    "pyyaml>=6.0.0",
    "tqdm>=4.66.0",

    # /v1/responses OpenAI-compatible serving layer (see serve.py).
    # fastapi/starlette/uvicorn/pydantic are already pulled transitively
    # by omlx, but we declare them
    # explicitly so that the benchmark env remains stable even if omlx's
    # transitive serving stack changes later.
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
    # 주의: torch / torchvision은 추론에 사용하지 않는다 (mlx가 담당). 다만
    # transformers의 Qwen3.5 / Qwen3-VL processor가 video sub-processor를 hard
    # import 하므로, `engine/_processor_shim.py` 가 그 단계를 우회한다.
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.uv]
# This project is not a buildable package — uv should manage deps only,
# not try to install the project itself.
package = false

# Restrict the universal lockfile to the platforms we actually support.
# Without this, uv would also try to resolve for Windows / Linux-aarch64
# and fail because mlx-cuda-13 only ships manylinux x86_64 wheels.
environments = [
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
]
