[project]
name = "tq-bench-framework"
version = "0.1.0"
description = "Benchmark runner for TurboQuant and MLX KV-cache quantization on VLM tasks"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.8.4",
    "httpx>=0.27",
    "matplotlib>=3.10.8",
    "pillow>=12.2.0",
    "python-dotenv>=1.0",
    "PyYAML>=6.0",
    # Required only for ``--in-process`` mode (EmbeddedBackendClient).
    # Pinned to the same omlx_ver_test branch as TQ_BACKEND so the
    # bench framework and the HTTP backend always agree on the
    # underlying VLM stack revision.
    "omlx @ git+https://github.com/Chedrian07/omlx.git@omlx_ver_test",
    'mlx>=0.31.0 ; sys_platform == "darwin"',
    'mlx[cuda13]>=0.31.0 ; sys_platform == "linux"',
]

[project.scripts]
tq-bench = "tq_bench_framework.cli:main"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tq_bench_framework"]

[tool.hatch.metadata]
# Required because we pin omlx to a git URL (a "direct reference") in
# project.dependencies. Hatchling refuses direct references unless this
# flag is set explicitly. See: https://hatch.pypa.io/latest/config/dependency/
allow-direct-references = true

[tool.hatch.build]
include = [
    "src/tq_bench_framework/benchmarks/manifests/*.yaml",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
